tests/parse_print/random_perturb/set01/delete-10/stderr.expected
Error:
    Parser error in file: tests/parse_print/random_perturb/set01/delete-10/delete-10.essence Error is:
ValidatorError tests/parse_print/random_perturb/set01/delete-10/delete-10.essence:1:1:
  |
1 | lnguage Essence 1.3
  | ^^^^^^^^^^^^^^^^^^^
Skipped tokens
